fix : z-index

--- a/src/Components/FilterSidebar/FilterSidebar.css
+++ b/src/Components/FilterSidebar/FilterSidebar.css
@@ -57,7 +57,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 99;
+    z-index: 1;
   }
   .filter-button {
     width: 100%;
@@ -66,7 +66,7 @@
     justify-content: center;
     position: fixed;
     bottom: 0;
-    z-index: 999;
+    z-index: 9999;
     background-color: var(--primary-color);
   }
 
